<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrate2">

    <ImageButton
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="registrofinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="239dp"
        android:layout_height="140dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opc1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opc2" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opc3"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="15dp"
        android:text="@string/sex1"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:text="@string/sex2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="78dp"
        android:text="@string/ingsex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="259dp"
        android:layout_height="34dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="69dp"
        android:text="@string/identificate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="234dp"
        android:layout_height="49dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="52dp"
        android:text="@string/sgte"
        app:layout_constraintBottom_toTopOf="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>