<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrate">

    <TextView
        android:id="@+id/tel"
        android:layout_width="180dp"
        android:layout_height="28dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="134dp"
        android:text="@string/tel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="118dp"
        android:onClick="continuarRegistro"
        android:text="@string/reg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/inputtel"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/pais"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="49dp"
        android:text="@string/pais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputtel" />

    <MultiAutoCompleteTextView
        android:id="@+id/Multiauto"
        android:layout_width="232dp"
        android:layout_height="65dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="83dp"
        android:text="@string/paisescrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pais" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="97dp"
        android:text="@string/dtos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Multiauto" />

</androidx.constraintlayout.widget.ConstraintLayout>