<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro3">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="288dp"
        android:layout_height="32dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="60dp"
        android:text="@string/ingcorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="59dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button2"
        android:layout_width="276dp"
        android:layout_height="66dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="72dp"
        android:onClick="vercarga"
        android:text="@string/registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="279dp"
        android:layout_height="48dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="66dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
</androidx.constraintlayout.widget.ConstraintLayout>