<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?android:attr/textColorHighlightInverse"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="330dp"
        android:layout_height="553dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/username3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/Titular"
                android:layout_width="357dp"
                android:layout_height="match_parent"
                android:text="@string/Titulo" />

        </TableRow>

        <TableRow
            android:id="@+id/username2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txviewpsw1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID" />

        </TableRow>

        <TableRow
            android:id="@+id/username5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txviewpsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PSW" />

        </TableRow>

        <TableRow
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="24dp">

            <Button
                android:id="@+id/IniciarSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="actividadsesion"
                android:text="@string/inc" />
        </TableRow>

        <TableRow
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notienescuenta" />
        </TableRow>

        <TableRow
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="actividadRegistro"
                android:text="@string/btnregistrar" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>